--- a/notebooks/train-test-split.ipynb
+++ b/notebooks/train-test-split.ipynb
@@ -1,3 +1,156 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:878a4f70e79705453b7d4c34b7e3dd17df3e9dbe5fbaf2a4b85f48fc9dbf00b6
-size 2914
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "41160c98",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Train/Validation Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "72e4f7a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from typing import Tuple\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a375fd35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_STATE = 42"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "589c1c74",
+   "metadata": {},
+   "source": [
+    "## Daten Laden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dff71103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series = pd.read_parquet('../data/processed/train_with_features.parquet')\n",
+    "events = pd.read_csv('../data/cleaned/train_events.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "40da2623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series_ids = series['series_id'].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a280191",
+   "metadata": {},
+   "source": [
+    "## Splitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f66454b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_series_ids, validation_series_ids = train_test_split(series_ids, test_size=0.8, random_state=RANDOM_STATE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6f7a522f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_series = series.loc[lambda d: d['series_id'].isin(train_series_ids)]\n",
+    "train_events = events.loc[lambda d: d['series_id'].isin(train_series_ids)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a68668d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_series = series.loc[lambda d: d['series_id'].isin(validation_series_ids)]\n",
+    "validation_events = events.loc[lambda d: d['series_id'].isin(validation_series_ids)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41584150",
+   "metadata": {},
+   "source": [
+    "## Daten speichern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "92ccbf10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_series.to_parquet('../data/processed/train_series_split.parquet')\n",
+    "train_events.to_csv('../data/processed/train_events_split.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0b3ecfde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_series.to_parquet('../data/processed/validation_series_split.parquet')\n",
+    "validation_events.to_csv('../data/processed/validation_events_split.csv')"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
