--- a/notebooks/submission.ipynb
+++ b/notebooks/submission.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -27,35 +27,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6d6a652091be522",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-10-12T14:20:26.258383900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Hyperparams\n",
-    "NUM_STEPS = 20"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f6d6a652091be522"
+    "NUM_STEPS = 20\n",
+    "\n",
+    "features = ['anglez', 'enmo', 'hour', 'anglez_abs', 'anglez_diff', 'enmo_diff', 'anglez_x_enmo', \n",
+    "            'anglez_rolling_mean', 'enmo_rolling_mean', 'anglez_rolling_max',\n",
+    "            'enmo_rolling_max', 'anglez_rolling_min', 'enmo_rolling_min',\n",
+    "            'anglez_rolling_std', 'enmo_rolling_std']"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "aadbd2fa6924bbdc",
+   "metadata": {},
    "source": [
     "## Feature Engineering"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "aadbd2fa6924bbdc"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8ebdc521ffadde6",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-10-12T14:20:26.384960Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "def make_features_chunk(series_id, periods=NUM_STEPS):\n",
+    "def make_features(series_id, periods=NUM_STEPS):\n",
     "    df = pd.read_parquet('../data/raw/train_series.parquet', filters=[('series_id','=',series_id)])\n",
+    "    #df = pd.read_parquet('/kaggle/input/child-mind-institute-detect-sleep-states/test_series.parquet', filters=[('series_id','=',series_id)])\n",
     "    \n",
-    "    print(df.shape)\n",
     "    print('Generating time features')\n",
     "    df[\"hour\"] = df['timestamp'].str[11:13]\n",
     "    \n",
@@ -76,120 +87,59 @@
     "    df[\"enmo_rolling_std\"] = df[\"enmo\"].rolling(periods,center=True).std().bfill().ffill().astype('float32')    \n",
     "    \n",
     "    return df"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e8ebdc521ffadde6"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "df_test = pd.read_parquet('../data/raw/test_series.parquet')\n",
-    "#df_test = pd.read_parquet('/kaggle/input/child-mind-institute-detect-sleep-states/test_series.parquet')"
-   ],
+   "id": "f304a3a82bcbb301",
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "start_time": "2023-10-12T14:20:26.414463700Z"
+    }
    },
-   "id": "f304a3a82bcbb301"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
    "source": [
-    "def make_features(test):\n",
-    "    train_data = []\n",
+    "df_test = pd.read_parquet('../data/raw/train_series.parquet', columns=['series_id'])\n",
+    "#df_test = pd.read_parquet('/kaggle/input/child-mind-institute-detect-sleep-states/test_series.parquet', columns=['series_id'])\n",
     "\n",
-    "    total_len = test.series_id.nunique()\n",
-    "    series_ids = test.series_id.unique()\n",
-    "    \n",
-    "    del test\n",
-    "    gc.collect()\n",
-    "\n",
-    "    for i, series_id in enumerate(series_ids):\n",
-    "        print(f'Step {i+1} of {total_len}')\n",
-    "        chunk = make_features_chunk(series_id)\n",
-    "        train_data.append(chunk)\n",
-    "        del chunk\n",
-    "        gc.collect()\n",
-    "\n",
-    "    return pd.concat(train_data).reset_index(drop=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c70c17e9e1ece792"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "test_with_features = make_features(df_test)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true
-   },
-   "id": "dcbfa92ac011a01"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "series_ids = df_test.series_id.unique()[:2]\n",
     "del df_test\n",
     "gc.collect()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "95dfaa0061dc4ef5"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "features = ['anglez', 'enmo', 'hour', 'anglez_abs', 'anglez_diff', 'enmo_diff', 'anglez_x_enmo', \n",
-    "            'anglez_rolling_mean', 'enmo_rolling_mean', 'anglez_rolling_max',\n",
-    "            'enmo_rolling_max', 'anglez_rolling_min', 'enmo_rolling_min',\n",
-    "            'anglez_rolling_std', 'enmo_rolling_std']"
-   ],
+   "id": "2ae4febea7ab58fb",
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "start_time": "2023-10-12T14:20:59.607177400Z"
+    }
    },
-   "id": "37b0b816220ecc09"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
    "source": [
     "# loading classifier\n",
     "dt_classifier = load('dt_classifier.joblib')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2ae4febea7ab58fb"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "d31c8fc4e2d8ab59",
+   "metadata": {},
    "source": [
     "## Get the Events from the predictions with smoothing"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d31c8fc4e2d8ab59"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6fec2e186c3f6f27",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-10-12T14:21:00.368893600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_events(test_series, classifier) :\n",
@@ -239,55 +189,78 @@
     "                score = X[(X['step'] >= onset) & (X['step'] <= wakeup)]['score'].mean()\n",
     "\n",
     "                # Adding sleep event to dataframe\n",
-    "                onset_row = {'row_id': len(events), 'series_id': idx, 'step': onset, 'event': 'onset', 'score': score}                \n",
+    "                onset_row = {'series_id': idx, 'step': onset, 'event': 'onset', 'score': score}                \n",
     "                events.append(onset_row)\n",
     "\n",
-    "                wakeup_row = {'row_id': len(events), 'series_id': idx, 'step': wakeup, 'event': 'wakeup', 'score': score}\n",
+    "                wakeup_row = {'series_id': idx, 'step': wakeup, 'event': 'wakeup', 'score': score}\n",
     "                events.append(wakeup_row)\n",
     "\n",
-    "        indexToDrop = test_series[test_series.series_id == idx].index\n",
-    "        test_series.drop(indexToDrop, inplace=True)\n",
-    "        del X\n",
-    "        gc.collect()\n",
-    "\n",
     "    return pd.DataFrame(events)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6fec2e186c3f6f27"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ae64431335613155",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-10-12T14:21:00.388624100Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "submissions = get_events(test_with_features, dt_classifier)\n",
-    "submissions.to_csv('submission.csv', sep=',', index=False)"
-   ],
+    "def get_submissions(series_ids, classifier):\n",
+    "    events = []\n",
+    "\n",
+    "    total_len = len(series_ids)\n",
+    "\n",
+    "    for i, series_id in enumerate(series_ids):\n",
+    "        print(f'Step {i+1} of {total_len}')\n",
+    "        series_with_features = make_features(series_id)\n",
+    "        events.append(get_events(series_with_features, classifier))\n",
+    "        \n",
+    "        del series_with_features\n",
+    "        \n",
+    "        gc.collect()\n",
+    "\n",
+    "    return pd.concat(events).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a13c74a7391c7b6e",
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "start_time": "2023-10-12T14:21:00.421551900Z"
+    }
    },
-   "id": "a13c74a7391c7b6e"
+   "outputs": [],
+   "source": [
+    "submissions = get_submissions(series_ids, dt_classifier)\n",
+    "submissions.reset_index(inplace=True)\n",
+    "submissions.rename(columns={\"index\": \"row_id\"}, inplace=True)\n",
+    "submissions.to_csv('submission.csv', sep=',', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AICH",
    "language": "python",
-   "name": "python3"
+   "name": "aich"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
