--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -15,6 +15,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "edbf0f4aa8d1d4",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Base\n",
@@ -36,62 +38,52 @@
     "\n",
     "# Saving\n",
     "from joblib import dump, load"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "edbf0f4aa8d1d4"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "67a84015f109223b",
+   "metadata": {},
    "outputs": [],
    "source": [
     "#data = pd.read_parquet('../data/processed/train_with_features_lightweight_10.parquet')\n",
     "data = pd.read_parquet('../data/processed/train_with_features.parquet')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "67a84015f109223b"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9e9beeeb60494c98",
+   "metadata": {},
    "outputs": [],
    "source": [
     "data.head()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9e9beeeb60494c98"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "d6c606911f7c053d",
+   "metadata": {},
    "source": [
     "## Hyperparams"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d6c606911f7c053d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40ea5406b7e76101",
+   "metadata": {},
    "outputs": [],
    "source": [
     "data.columns"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "40ea5406b7e76101"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2cd73821619d05d9",
+   "metadata": {},
    "outputs": [],
    "source": [
     "RANDOM_STATE = 42\n",
@@ -100,25 +92,21 @@
     "            'enmo_rolling_max', 'anglez_rolling_min', 'enmo_rolling_min',\n",
     "            'anglez_rolling_std', 'enmo_rolling_std']\n",
     "target_column = ['awake']"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2cd73821619d05d9"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "32841e4f5ececc66",
+   "metadata": {},
    "source": [
     "## Test, Train Split"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "32841e4f5ececc66"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ad1afe4f69daefc",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def group_test_train_split(samples: pd.DataFrame, group: str, test_size, random_state: int) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
@@ -129,15 +117,13 @@
     "    samples_train = samples.loc[lambda d: d[group].isin(groups_train)]\n",
     "\n",
     "    return samples_test, samples_train"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5ad1afe4f69daefc"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "949e7e89088ffeaa",
+   "metadata": {},
    "outputs": [],
    "source": [
     "test, train = group_test_train_split(data, 'series_id', test_size=0.2, random_state=RANDOM_STATE)\n",
@@ -146,68 +132,58 @@
     "y_train = train[target_column]\n",
     "X_test = test\n",
     "y_test = test[target_column]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "949e7e89088ffeaa"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16f5976634446084",
+   "metadata": {},
    "outputs": [],
    "source": [
     "del data\n",
     "del train\n",
     "del X_train\n",
     "del y_train"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "16f5976634446084"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1abb3c9d60bf54fd",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import gc\n",
     "gc.collect()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1abb3c9d60bf54fd"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "26ef522c8a8e33fd",
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(X_train.shape)\n",
     "print(y_train.shape)\n",
     "print(X_test.shape)\n",
     "print(y_test.shape)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "26ef522c8a8e33fd"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "d8cdb0db939d8003",
+   "metadata": {},
    "source": [
     "## Pipeline"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d8cdb0db939d8003"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c73d511fa0394f33",
+   "metadata": {},
    "outputs": [],
    "source": [
     "kn_classifier = Pipeline([\n",
@@ -217,170 +193,143 @@
     "dt_classifier = Pipeline([\n",
     "    ('scale', StandardScaler()),\n",
     "    ('dtc', DecisionTreeClassifier())])"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c73d511fa0394f33"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "cc2316fcfb9970f5",
+   "metadata": {},
    "source": [
     "## Classification"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "cc2316fcfb9970f5"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "69ec60b218ce204f",
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "dt_classifier.fit(X_train[features], y_train)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true
-   },
-   "id": "69ec60b218ce204f"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "46328a3dbd03e254",
+   "metadata": {},
    "source": [
     "## Save and load model"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "46328a3dbd03e254"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "463ad6650ca4e263",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# saving classifier\n",
     "dump(dt_classifier, 'dt_classifier.joblib')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "463ad6650ca4e263"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fa1fd65da4fbbb7b",
+   "metadata": {},
    "outputs": [],
    "source": [
     "del dt_classifier"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "fa1fd65da4fbbb7b"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "562b830bf0c648bb",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# loading classifier\n",
     "dt_classifier = load('dt_classifier.joblib')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "562b830bf0c648bb"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "3f4a6983be25c822",
+   "metadata": {},
    "source": [
     "## Prediction"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3f4a6983be25c822"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "edb448e603369b40",
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = dt_classifier.predict(X_test[features])\n",
     "y_pred_proba = dt_classifier.predict_proba(X_test[features])"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "edb448e603369b40"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6bf491ec15b2320d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(y_test.shape)\n",
     "print(y_pred.shape)\n",
     "print(y_pred_proba.shape)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6bf491ec15b2320d"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "f2abff852c700f20",
+   "metadata": {},
    "source": [
     "## Scores"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f2abff852c700f20"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5f52978c813a03b0",
+   "metadata": {},
    "outputs": [],
    "source": [
     "accuracy_score(y_test, y_pred)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5f52978c813a03b0"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5fcde34a42bffe58",
+   "metadata": {},
    "outputs": [],
    "source": [
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm)\n",
     "disp.plot(cmap='Blues')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5fcde34a42bffe58"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "6a48e33cd7c63c4f",
+   "metadata": {},
    "source": [
     "## Get the Events from the predictions without smoothing"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6a48e33cd7c63c4f"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d5992f084be6bc9d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_events(test_series, classifier) :\n",
@@ -430,38 +379,32 @@
     "                events.append(wakeup_row)\n",
     "\n",
     "    return pd.DataFrame(events)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d5992f084be6bc9d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "535d21b38f261c49",
+   "metadata": {},
    "outputs": [],
    "source": [
     "submissions = get_events(X_test, dt_classifier)\n",
     "submissions.to_csv('../results/submission_no_smoothing.csv', sep=',', index=False)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "535d21b38f261c49"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "127db44a0f77b18d",
+   "metadata": {},
    "source": [
     "## Get the Events from the predictions with smoothing"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "127db44a0f77b18d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6ede3f86de2bd3b",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_events_smoothed(test_series, classifier) :\n",
@@ -518,98 +461,82 @@
     "                events.append(wakeup_row)\n",
     "\n",
     "    return pd.DataFrame(events)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c6ede3f86de2bd3b"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dfdc668e4b574d24",
+   "metadata": {},
    "outputs": [],
    "source": [
     "submissions = get_events_smoothed(X_test, dt_classifier)\n",
     "submissions.head()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "dfdc668e4b574d24"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e3d9d31071b14e9",
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_test['series_id'].unique()[1:2]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6e3d9d31071b14e9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "54e7ccad5eeebfbc",
+   "metadata": {},
    "outputs": [],
    "source": [
     "submissions.to_csv('../results/submission_smoothing.csv', sep=',', index=False)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "54e7ccad5eeebfbc"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "53f10f4039d75bd5",
+   "metadata": {},
    "source": [
     "## Visualize Events"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "53f10f4039d75bd5"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c1e9dcfc217d6b05",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import plotly.express as px"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c1e9dcfc217d6b05"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f868337691796238",
+   "metadata": {},
    "outputs": [],
    "source": [
     "participant_series_id = X_test.series_id.unique()[1]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f868337691796238"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16e3abbe1de61a08",
+   "metadata": {},
    "outputs": [],
    "source": [
     "participant_series = test[test.series_id == participant_series_id].copy()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "16e3abbe1de61a08"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "44698241a1d03422",
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig = px.line(participant_series, x='step', y='anglez', title=f'Schlafdaten für {participant_series_id}')\n",
@@ -619,65 +546,55 @@
     "    fig.add_vline(x=row.step, line_width=3, line_dash='dash', line_color=color)\n",
     "\n",
     "fig.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "44698241a1d03422"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "3355f216265ca77c",
+   "metadata": {},
    "source": [
     "## Visualize Awake/Asleep status"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3355f216265ca77c"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e48b8516b06c843d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "visuals = X_test.copy()\n",
     "visuals['pred_awake'] = y_pred"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e48b8516b06c843d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "af9e9eb73be28bfe",
+   "metadata": {},
    "outputs": [],
    "source": [
     "visuals[\"pred_awake\"] = visuals[\"pred_awake\"].rolling(12*30, center=True).mean().fillna(method=\"bfill\").fillna(method=\"ffill\")\n",
     "\n",
     "# Binarize the smoothing column\n",
     "visuals[\"pred_awake\"] = visuals[\"pred_awake\"].round()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "af9e9eb73be28bfe"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4f3e315c44da162",
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig = px.line(visuals[visuals.series_id == participant_series_id][:90000].rename(columns={\"awake\": \"Participant Awake\", \"pred_awake\": \"Prediction Awake\"}), x='timestamp' ,y=['Participant Awake', 'Prediction Awake'])"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4f3e315c44da162"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f09ab7ff68e59d19",
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig.update_layout(\n",
@@ -691,30 +608,24 @@
     "        title = 'Timestamp'\n",
     "    )\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f09ab7ff68e59d19"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f92bfb443eaa1ec2",
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f92bfb443eaa1ec2"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "aich",
+   "display_name": "AICH",
    "language": "python",
-   "display_name": "AICH"
+   "name": "aich"
   },
   "language_info": {
    "codemirror_mode": {
