--- a/notebooks/submission.ipynb
+++ b/notebooks/submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "initial_id",
    "metadata": {
     "is_executing": true
@@ -91,19 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "f304a3a82bcbb301",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2023-10-12T14:20:26.414463700Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2030"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_test = pd.read_parquet('../data/raw/train_series.parquet', columns=['series_id'])\n",
     "#df_test = pd.read_parquet('/kaggle/input/child-mind-institute-detect-sleep-states/test_series.parquet', columns=['series_id'])\n",
     "\n",
-    "series_ids = df_test.series_id.unique()[:2]\n",
+    "series_ids = df_test.series_id.unique()[:5]\n",
     "del df_test\n",
     "gc.collect()"
    ]
@@ -133,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "6fec2e186c3f6f27",
    "metadata": {
     "ExecuteTime": {
@@ -142,7 +153,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_events(test_series, classifier) :\n",
+    "def get_events(test_series, classifier, smoothing_minutes) :\n",
     "    \"\"\"\n",
     "    Takes a time series and a classifier and returns a formatted submission dataframe.\n",
     "    \"\"\"\n",
@@ -161,7 +172,7 @@
     "        X['not_awake'] = not_awake\n",
     "        X['awake'] = awake\n",
     "        \n",
-    "        smoothing_length = 12 * 30 # 30 Minutes\n",
+    "        smoothing_length = 12 * smoothing_minutes\n",
     "        X[\"score\"] = X[\"awake\"].rolling(smoothing_length, center=True).mean().fillna(method=\"bfill\").fillna(method=\"ffill\")\n",
     "        X[\"smooth\"] = X[\"not_awake\"].rolling(smoothing_length, center=True).mean().fillna(method=\"bfill\").fillna(method=\"ffill\")\n",
     "\n",
@@ -200,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "ae64431335613155",
    "metadata": {
     "ExecuteTime": {
@@ -209,7 +220,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_submissions(series_ids, classifier):\n",
+    "def get_submissions(series_ids, classifier, smoothing_minutes):\n",
     "    events = []\n",
     "\n",
     "    total_len = len(series_ids)\n",
@@ -217,7 +228,7 @@
     "    for i, series_id in enumerate(series_ids):\n",
     "        print(f'Step {i+1} of {total_len}')\n",
     "        series_with_features = make_features(series_id)\n",
-    "        events.append(get_events(series_with_features, classifier))\n",
+    "        events.append(get_events(series_with_features, classifier, smoothing_minutes))\n",
     "        \n",
     "        del series_with_features\n",
     "        \n",
@@ -228,20 +239,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "a13c74a7391c7b6e",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2023-10-12T14:21:00.421551900Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_submissions() missing 1 required positional argument: 'smoothing_minutes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [47]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m submissions \u001B[38;5;241m=\u001B[39m \u001B[43mget_submissions\u001B[49m\u001B[43m(\u001B[49m\u001B[43mseries_ids\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdt_classifier\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m submissions\u001B[38;5;241m.\u001B[39mreset_index(inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[0;32m      3\u001B[0m submissions\u001B[38;5;241m.\u001B[39mrename(columns\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mindex\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrow_id\u001B[39m\u001B[38;5;124m\"\u001B[39m}, inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "\u001B[1;31mTypeError\u001B[0m: get_submissions() missing 1 required positional argument: 'smoothing_minutes'"
+     ]
+    }
+   ],
    "source": [
-    "submissions = get_submissions(series_ids, dt_classifier)\n",
+    "submissions = get_submissions(series_ids, dt_classifier, 30)\n",
     "submissions.reset_index(inplace=True)\n",
     "submissions.rename(columns={\"index\": \"row_id\"}, inplace=True)\n",
     "submissions.to_csv('submission.csv', sep=',', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "436d2fd4",
+   "metadata": {},
+   "source": [
+    "# Scoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f686ea79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "from scoring.event_detection_matrix import competition_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2a5b2835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_events = pd.read_csv('../data/raw/train_events.csv')\n",
+    "series_ids = submissions['series_id'].drop_duplicates()\n",
+    "needed_events = all_events.loc[all_events['series_id'].isin(series_ids)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "c70559b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 2 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 3 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 4 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 5 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Scoring for smoothing minutes at 30: 0.5411282637820242\n",
+      "Step 1 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 2 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 3 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 4 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 5 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Scoring for smoothing minutes at 45: 0.5419236748764606\n",
+      "Step 1 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 2 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 3 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 4 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Step 5 of 5\n",
+      "Generating time features\n",
+      "Generating statistical features\n",
+      "Generating rolling features\n",
+      "Scoring for smoothing minutes at 60: 0.5406407456202663\n",
+      "30 Minutes, score: 0.5411282637820242\n",
+      "45 Minutes, score: 0.5419236748764606\n",
+      "60 Minutes, score: 0.5406407456202663\n"
+     ]
+    }
+   ],
+   "source": [
+    "scoring = []\n",
+    "minutes = [30, 45, 60]\n",
+    "\n",
+    "for minute in minutes:\n",
+    "    submissions = get_submissions(series_ids, dt_classifier, minute)\n",
+    "    submissions.reset_index(inplace=True)\n",
+    "    submissions.rename(columns={\"index\": \"row_id\"}, inplace=True)\n",
+    "    score = competition_score(needed_events, submissions)\n",
+    "    scoring.append(score)  \n",
+    "\n",
+    "for score, minute in zip(scoring, minutes):\n",
+    "    print(f'{minute} Minutes, score: {score}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d9d4684",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
